--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8"/>
         <title>Primera Pagina Web</title>
-        <meta name="description" content="Página web de divulgación Científica"/>
-        <meta name="author" content="Crhistian Montenegro"/>
+        <meta name="description" content="Página web de divulgación y difusión científica"/>
+        <meta name="author" content="Crhistian Mark Montenegro Valderrama"/>
         <meta name="keywords" content="miuBiotec, divulgación, Ciencia" />
         <link rel="stylesheet" href="estilos.css">
     </head>
@@ -38,10 +38,10 @@
                         <p>Comentarios (0)</p>
                     </footer>
                     <address>
-                        <a href="http://www.facebook.com">Facebook</a>
+                        <a href="http://www.facebook.com/crhistianmark.montenegrovalderrama">Facebook</a>
                     </address>
                     <address>
-                        <a href="http://www.instagram.com">Instagram</a>
+                        <a href="http://www.instagram.com/miubiotec">Instagram</a>
                     </address>
                 </article>
                 <article>
