--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
                 </article>
             </section>
             <aside class="columna">
-                <blockquote class="¿Qué es la Biotecnología?">
+                <blockquote class="Biotecnologia">
                     <address>
-                        <a href="Biotecnologia.html">Biotecnología Industrial</a>
+                        <a href="Biotecnologia.html">¿Qué es la Biotecnología?</a>
                     </address>
                 </blockquote>
                 <blockquote class="Industrial">
