--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="utf-8"/>
-        <title>Primera Pagina Web</title>
+        <title>Página Principal</title>
         <meta name="description" content="Página web de divulgación y difusión científica"/>
         <meta name="author" content="Crhistian Mark Montenegro Valderrama"/>
         <meta name="keywords" content="miuBiotec, divulgación, Ciencia" />
