--- a/Biotecnologia.html
+++ b/Biotecnologia.html
@@ -36,7 +36,8 @@
                         </p>
                         <p>
                         Hay dos tipos de biotecnología:
-                        La biotecnología tradicional, que consiste en la obtención de productos a partir de la fermentación, con conocimientos empíricos, y la biotecnología moderna, que consiste en la obtención de productos y servicios complejos, con nuevos conocimientos como: la genética y la ingeniería genética.
+                        La biotecnología tradicional, que consiste en la obtención de productos a partir de la fermentación, con conocimientos empíricos.
+                        La biotecnología moderna, que consiste en la obtención de productos y servicios complejos, con nuevos conocimientos como: la genética y la ingeniería genética.
                         </p>
                     </p>
                     <footer>
