--- a/Biotecnologia.html
+++ b/Biotecnologia.html
@@ -36,8 +36,12 @@
                         </p>
                         <p>
                         Hay dos tipos de biotecnología:
-                        La biotecnología tradicional, que consiste en la obtención de productos a partir de la fermentación, con conocimientos empíricos.
-                        La biotecnología moderna, que consiste en la obtención de productos y servicios complejos, con nuevos conocimientos como: la genética y la ingeniería genética.
+                        </p>
+                        <p>
+                        A) La biotecnología tradicional, que consiste en la obtención de productos a partir de la fermentación, con conocimientos empíricos.
+                        </p>
+                        <p>
+                        B) La biotecnología moderna, que consiste en la obtención de productos y servicios complejos, con nuevos conocimientos como: la genética y la ingeniería genética.
                         </p>
                     </p>
                     <footer>
