--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
     
             <nav class="menu">
                 <ul>
-                    <li>Principal</li>
-                    <address>
-                        <a href="index.html">¿Qué es la Biotecnología?</a>
-                    </address>
+                    <li><a href="index.html"></a>Principal</li>
                     <li>Temas</li>
                     <li>Contáctanos</li>
                 </ul>
