--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
             <nav class="menu">
                 <ul>
-                    <li><a href="index.html">Principal</li>
+                    <li><a href="index.html">Principal</a></li>
                     <li>Temas</li>
                     <li>Contáctanos</li>
                 </ul>
