--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <nav class="menu">
                 <ul>
                     <li><a href="index.html">Principal</a></li>
-                    <li>Temas</li>
-                    <li>Contáctanos</li>
+                    <li><a href="Temas.html">Temas</a></li>
+                    <li><a href="Contacto.html">Contáctanos</a></li>
                 </ul>
             </nav>
     
