--- a/Biotecnologia Industrial.html
+++ b/Biotecnologia Industrial.html
@@ -88,22 +88,35 @@
                 </article>
             </section>
             <aside class="columna">
+                <blockquote class="Biotecnologia">
+                    <address>
+                        <a href="Biotecnologia.html">¿Qué es la Biotecnología?</a>
+                    </address>
+                </blockquote>
                 <blockquote class="Industrial">
                     <address>
-                        <a href="Imagenes/BiotecLogo2.png">Biotecnología Industrial</a>
+                        <a href="Biotecnologia Industrial.html">Biotecnología Industrial</a>
                     </address>
                 </blockquote>
                 <blockquote class="Salud">
-                    Biotecnología de Salud
+                    <address>
+                        <a href="Biotecnologia Salud.html">Biotecnología en Salud</a>
+                    </address>
                 </blockquote>
                 <blockquote class="Agricola">
-                    Biotecnología Agrícola
+                    <address>
+                        <a href="Biotecnologia Agricola.html">Biotecnología Agrícola</a>
+                    </address>
                 </blockquote>
                 <blockquote class="Ambiental">
-                    Biotecnología Ambiental
+                    <address>
+                        <a href="Biotecnologia Ambiental.html">Biotecnología Ambiental</a>
+                    </address>
                 </blockquote>
                 <blockquote class="Bioinformatica">
-                    Bioinformática
+                    <address>
+                        <a href="Bioinformatica.html">Bioinformática</a>
+                    </address>
                 </blockquote>
             </aside>
     
