--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <ul>
                     <li><a href="index.html">Principal</a></li>
                     <li><a href="Temas.html">Temas</a></li>
+                    <li><a href="Eventos.html">Eventos</a></li>
                     <li><a href="Contacto.html">Contáctanos</a></li>
                 </ul>
             </nav>
